--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
-    <!-- OWL CSS
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
 
     <!-- Link Swiper's CSS -->
@@ -58,7 +50,7 @@
 
 
 
-    <!-- test owl -->
+    <!-- OWL CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -681,19 +673,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- fancybox -->
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script>
@@ -736,8 +715,6 @@
     </script>
 
 
-
-
     <!-- counter -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
@@ -761,9 +738,6 @@
     <script>
         new WOW().init();
     </script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
-integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
-crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
 <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
@@ -796,10 +770,10 @@ $(document).ready(function () {
         items: 1 //số lượng item khi ở màn hình >= 0
       },
       600: {
-        items: 2 //số lượng item khi ở màn hình >= 576px
+        items: 2 //số lượng item khi ở màn hình >= 600px
       },
       1000: {
-        items: 3 //số lượng item khi ở màn hình >= 576px
+        items: 3 //số lượng item khi ở màn hình >= 1000px
       }
     }
   });
